--- a/practicaFinal/src/main/resources/application.properties
+++ b/practicaFinal/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/practicafinal?useSSL=false&serverTimezone=Europe/Madrid
+spring.datasource.username=root
+spring.datasource.password=casado2000
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=debug
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
