--- a/practicaFinal/src/main/resources/application.properties
+++ b/practicaFinal/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.jpa.database=mysql
+server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/practicafinal?useSSL=false&serverTimezone=Europe/Madrid
 spring.datasource.username=root
 spring.datasource.password=casado2000
@@ -6,5 +8,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
-spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.jpa.open-in-view=false
 spring.mvc.view.suffix=.jsp
+spring.mvc.view.prefix=/WEB-INF/jsp/
