--- a/practicaFinal/src/main/resources/application.properties
+++ b/practicaFinal/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.database=mysql
 server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/practicafinal?useSSL=false&serverTimezone=Europe/Madrid
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=casado2000
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
